--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,12 @@
-.link{
+.body{
+    max-width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+    word-wrap: break-word;
+}
+.body .link {
     cursor:pointer;
+}
+.body .hero {
+    text-align: center;
 }
