--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,3 +10,15 @@
 .body .hero {
     text-align: center;
 }
+.body ul{
+    padding-left: 0;
+    padding-right: 0;
+}
+
+@media only screen and (max-width: 1024px) {
+    .body{
+        padding-left: 1rem;
+        padding-right: 1rem;
+        width: 100%;
+    }
+}
