--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,9 +10,22 @@
 .body .hero {
     text-align: center;
 }
+.body .hero img{
+    width: 300px;
+    height: 300px;
+}
 .body ul{
     padding-left: 0;
     padding-right: 0;
+}
+.body ul h2{
+    margin-bottom: 4px;
+}
+.body ul sup{
+    color: rgb(99, 99, 99);
+}
+.body ul p{
+    margin-top: 5px;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -20,5 +33,11 @@
         padding-left: 1rem;
         padding-right: 1rem;
         width: 100%;
+    }
+    .body .hero img{
+        padding-left: 1rem;
+        padding-right: 1rem;
+        width: 100%;
+        height: auto;
     }
 }
