--- a/styles/Portfolio.module.css
+++ b/styles/Portfolio.module.css
@@ -10,6 +10,10 @@
 .body .hero {
     text-align: center;
 }
+.body .hero img{
+    width: 300px;
+    height: 300px;
+}
 .body ul{
     padding-left: 0;
     padding-right: 0;
@@ -29,5 +33,11 @@
         padding-left: 1rem;
         padding-right: 1rem;
         width: 100%;
+    }
+    .body .hero img{
+        padding-left: 1rem;
+        padding-right: 1rem;
+        width: 100%;
+        height: auto;
     }
 }
