--- a/styles/base.scss
+++ b/styles/base.scss
@@ -19,33 +19,14 @@
       padding-right: 1rem;
       width: 100%;
     }
-    .link {
-      cursor: pointer;
-    }
-    .hero {
-      text-align: center;
-      img {
-        width: 300px;
-        height: 300px;
-        @include mobile {
-          padding-left: 1rem;
-          padding-right: 1rem;
-          width: 100%;
-          height: auto;
-        }
-      }
-    }
-    ul {
+    
+    .list {
       padding-left: 0;
       padding-right: 0;
-      h2 {
-        margin-bottom: 4px;
-      }
-      sup {
-        color: rgb(99, 99, 99);
-      }
-      p {
-        margin-top: 5px;
+      display: flex;
+      flex-direction: column;
+      &>a{
+        display: flex;
       }
     }
   }
