--- a/styles/Row.module.scss
+++ b/styles/Row.module.scss
@@ -1,23 +1,41 @@
 @import "./base.scss";
 
 .row {
-  transition: all 0.4s;
+  transition: border 0.4s;
   padding: 0 15px;
-  flex-grow: 1;
-  &:hover {
-    background-color: rgb(0, 0, 0);
-    color: white !important;
+  display: flex;
+  align-items: center;
+  border: solid 1px #fff;
+  .image {
+    height: 160px;
+    width: 160px;
+    min-width: 160px;
+    margin: 15px;
+    background-position: center;
+    background-size: cover;
+  }
+  .content {
+    flex-shrink: 2;
+    h2 {
+      margin-bottom: 4px;
+    }
     sup {
-      color: rgb(216, 196, 21);
+      color: rgb(99, 99, 99);
+    }
+    p {
+      margin-top: 5px;
     }
   }
-  h2 {
-    margin-bottom: 4px;
+  &:hover {
+    border: solid 1px rgb(182, 182, 182);
   }
-  sup {
-    color: rgb(99, 99, 99);
-  }
-  p {
-    margin-top: 5px;
+  @include mobile {
+    padding: 0 5px;
+    .image {
+      height: 110px;
+      width: 110px;
+      min-width: 110px;
+      margin: 5px;
+    }
   }
 }
