--- a/styles/Row.module.scss
+++ b/styles/Row.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   border: solid 1px #fff;
+  flex-grow: 1;
   .image {
     height: 160px;
     width: 160px;
