--- a/styles/Row.module.scss
+++ b/styles/Row.module.scss
@@ -32,11 +32,11 @@
   }
   @include mobile {
     padding: 0 5px;
+    flex-direction: column;
     .image {
-      height: 110px;
-      width: 110px;
-      min-width: 110px;
-      margin: 5px;
+      height: 90px;
+      width: 100%;
+      margin: 25px 8px 0px 8px;
     }
   }
 }
